2014-08-01  Stefan Liebler  <stli@linux.vnet.ibm.com>

	* NEWS: Explain the s390 jmp_buf / ucontext_t ABI change
	reversal.

2014-07-31  Stefan Liebler  <stli@linux.vnet.ibm.com>

	* sysdeps/s390/Makefile: Delete file.
	* sysdeps/s390/Versions (GLIBC_2.19): Remove __setjmp.
	* sysdeps/s390/__longjmp.c: Delete file.
	* sysdeps/s390/bits/setjmp.h (__s390_jmp_buf):
	Remove fields __flags and __reserved.
	* sysdeps/s390/longjmp.c: Include setjmp/longjmp.c
	and add versioning.
	* sysdeps/s390/rtld-__longjmp.c: Delete file.
	* sysdeps/s390/rtld-global-offsets.sym: Likewise.
	* sysdeps/s390/rtld-setjmp.S: Likewise.
	* sysdeps/s390/s390-32/__longjmp-common.c: Move to ...
	* sysdeps/s390/s390-32/__longjmp.c: ... here.
	* sysdeps/s390/s390-32/setjmp-common.S: Move to ...
	* sysdeps/s390/s390-32/setjmp.S: ... here.
	Add versioning.
	(__sigsetjmp): Remove setting __flags field.
	* sysdeps/s390/s390-64/__longjmp-common.c:Move to ...
	* sysdeps/s390/s390-64/__longjmp.c: ... here.
	* sysdeps/s390/s390-64/setjmp-common.S: Move to ...
	* sysdeps/s390/s390-64/setjmp.S: ... here.
	Add versioning.
	(__sigsetjmp): Remove setting __flags field.
	* sysdeps/s390/setjmp.S: Delete file.
	* sysdeps/s390/sigjmp.c: Likewise.
	* sysdeps/s390/v1-longjmp.c: Likewise.
	* sysdeps/s390/v1-setjmp.h: Likewise.
	* sysdeps/s390/v1-sigjmp.c: Likewise.
	* sysdeps/unix/sysv/linux/s390/Makefile (sysdep_routines):
	Remove v1-longjmp_chk.
	* sysdeps/unix/sysv/linux/s390/getcontext.S: Delete file.
	* sysdeps/unix/sysv/linux/s390/longjmp_chk.c:
	Include debug/longjmp_chk.c and add versioning.
	* nptl/sysdeps/unix/sysv/linux/s390/pt-longjmp.c:
	Include nptl/sysdeps/pthread/pt-longjmp.c and add versioning.
	* sysdeps/unix/sysv/linux/s390/rtld-getcontext.S: Delete file.
	* sysdeps/unix/sysv/linux/s390/s390-32/____longjmp_chk.c:
	Include __longjmp.c.
	* sysdeps/unix/sysv/linux/s390/s390-32/getcontext-common.S:
	Move to ...
	* sysdeps/unix/sysv/linux/s390/s390-32/getcontext.S: ... here.