@@ -1,3 +1,10 @@
+2014-08-26  Florian Weimer  <fweimer@redhat.com>
+
+	[BZ #17187]
+	* iconv/gconv_trans.c (struct known_trans, search_tree, lock,
+	trans_compare, open_translit, __gconv_translit_find):
+	Remove module loading code.
+
 2014-08-01  Stefan Liebler  <stli@linux.vnet.ibm.com>
 
 	* NEWS: Explain the s390 jmp_buf / ucontext_t ABI change
